--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                <img src="./images/techcrunch.png" alt="techbrench png" height="30">
             </div>
             <div class="col-lg-3 col-sm-12">
-              <img src="./images/mashable.png" alt="mashable png " height="30">
+              <img src="./mashable.png" alt="mashable png " height="30">
            </div>
            <div class="col-lg-3 col-sm-12">
             <img src="./images/bizinsider.png" alt="bizzinsider png" height="30">
