--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-sm-12">
-               <img src="./images/techcrunch.png" alt="techbrench png" height="30">
+               <img src="./techcrunch.png" alt="techbrench png" height="30">
             </div>
             <div class="col-lg-3 col-sm-12">
               <img src="./mashable.png" alt="mashable png " height="30">
            </div>
            <div class="col-lg-3 col-sm-12">
-            <img src="./images/bizinsider.png" alt="bizzinsider png" height="30">
+            <img src="./bizinsider.png" alt="bizzinsider png" height="30">
          </div>
          <div class="col-lg-3 col-sm-12">
           <img src="./images/tnw.png" alt="tnw png" height="30">
